fix font inconsistencies on iPhone

--- a/assets/sass/_base.sass
+++ b/assets/sass/_base.sass
@@ -6,6 +6,8 @@
 
 body, html 
   scroll-behavior: smooth
+  font-kerning: normal
+  -webkit-text-size-adjust: 100%
 
 body
   font-family: var(--font)
